--- a/views/master.pug
+++ b/views/master.pug
@@ -10,7 +10,7 @@ html
         <!--[if lt IE 9]>
             script(src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js")
         <![endif]-->
-        link(href="/css/style.css" rel="stylesheet" type="text/css")
+        link(href="/dist/style.css" rel="stylesheet" type="text/css")
             
 
     body
