--- a/public/scss/index.scss
+++ b/public/scss/index.scss
@@ -16,7 +16,12 @@
 .record {
     width: calc(100% / 5);
     height: auto;
-    margin-bottom: 20px;
+    // overflow: scroll;
+    // margin: 20px;
+    // border: 1px solid #000;
+    // border-radius: 10px;
+    // padding: 10px;
+    // height: 250px;
 }
 
 .record-top {
