--- a/views/master.pug
+++ b/views/master.pug
@@ -4,6 +4,7 @@ html
         title="Discogs collection manager"
         link(href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css", rel="stylesheet")
         link(href='https://fonts.googleapis.com/css?family=Crimson+Text', rel='stylesheet')
+        link(href="https://fonts.googleapis.com/css?family=Poppins", rel="stylesheet")
         
         //- link(rel='stylesheet', href='/dist/style.css')
         meta(name="viewport" content="width=device-width, initial-scale=1")
